Добавляем анимацию появления шапки

--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-  <header class="page-header js-header">
+  <header class="page-header  page-header--loading  js-header">
     <div class="page-header__wrapper">
       <a href="#" class="page-header__logo" aria-label="Перейти на страницу FJORD.Inc">
         <svg width="100" height="15" viewBox="0 0 100 15" fill="none" xmlns="http://www.w3.org/2000/svg">
