вносит правки по замечаниям наставника по заданию "Анимируем фон при переключении экранов"

--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,7 @@
   <title>Mysterious Vacation</title>
   <link rel="stylesheet" href="css/style.min.css">
 </head>
-<body>
+<body class="page">
 
   <header class="page-header  page-header--loading  js-header">
     <div class="page-header__wrapper">
@@ -183,6 +183,8 @@
         <div class="slider__pagination swiper-pagination"></div>
       </div>
     </section>
+
+    <div class="page__background"></div>
 
     <section class="screen screen--hidden screen--prizes js-scrollspy" id="prizes">
       <div class="screen__wrapper">
