:heavy_check_mark: Сборка #3

--- a/3/index.html
+++ b/3/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/style.min.css">
 <link href="css/style.min.css" rel="stylesheet">  <base href="https://htmlacademy-animation.github.io/23249-magic-vacation-1/3/">
 </head>
-<body>
+<body class="page">
 
   <header class="page-header  page-header--loading  js-header">
     <div class="page-header__wrapper">
@@ -184,6 +184,8 @@
         <div class="slider__pagination swiper-pagination"></div>
       </div>
     </section>
+
+    <div class="page__background"></div>
 
     <section class="screen screen--hidden screen--prizes js-scrollspy" id="prizes">
       <div class="screen__wrapper">
