--- a/source/index.html
+++ b/source/index.html
@@ -400,10 +400,11 @@
       <div class="screen__wrapper">
         <div class="result result--prize">
           <div class="result__image">
-            <picture>
-              <source srcset="img/result2-mob.png 1x, img/result2-mob@2x.png 2x" media="(max-width: 768px) and (orientation: portrait)">
-              <img src="img/result2.png" srcset="img/result2@2x.png 2x" alt="">
-            </picture>
+            <img class="result__flamingo" src="img/flamingo.png" alt="">
+            <img class="result__leaf-blue-1" src="img/leaf-blue-1.png" alt="">
+            <img class="result__leaf-blue-2" src="img/leaf-blue-2.png" alt="">
+            <img class="result__leaf-green" src="img/leaf-green.png" alt="">
+            <img class="result__suitcase" src="img/suitcase.png"  alt="">
           </div>
           <h2 class="result__title">
             <span class="visually-hidden">ПОбеда!</span>
