7. Вкатываем кнопки слайдера

--- a/source/index.html
+++ b/source/index.html
@@ -347,7 +347,7 @@
     <section class="screen screen--hidden screen--result" id="result">
       <div class="screen__wrapper">
         <div class="result result--trip">
-          <div class="result__image">
+          <div class="result__images">
             <picture>
               <source srcset="img/result1-mob.png 1x, img/result1-mob@2x.png 2x" media="(max-width: 768px) and (orientation: portrait)">
               <img src="img/result1.png" srcset="img/result1@2x.png 2x" alt="">
@@ -399,11 +399,12 @@
     <section class="screen screen--hidden screen--result" id="result2">
       <div class="screen__wrapper">
         <div class="result result--prize">
-          <div class="result__image">
-            <picture>
-              <source srcset="img/result2-mob.png 1x, img/result2-mob@2x.png 2x" media="(max-width: 768px) and (orientation: portrait)">
-              <img src="img/result2.png" srcset="img/result2@2x.png 2x" alt="">
-            </picture>
+          <div class="result__images">
+            <img class="result__image result__image--leaf-right" src="img/leaf-blue-1.png" width="279" height="261" alt="">
+            <img class="result__image result__image--leaf-left" src="img/leaf-blue-2.png" width="279" height="241" alt="">
+            <img class="result__image result__image--leaf-green" src="img/leaf-green.png" width="332" height="159" alt="">
+            <img class="result__image result__image--suitcase" src="img/suitcase.png" width="300" height="300" alt="">
+            <img class="result__image result__image--flamingo" src="img/flamingo.png" width="200" height="200" alt="">
           </div>
           <h2 class="result__title">
             <span class="visually-hidden">ПОбеда!</span>
@@ -451,7 +452,7 @@
     <section class="screen screen--hidden screen--result" id="result3">
       <div class="screen__wrapper">
         <div class="result result--negative">
-          <div class="result__image">
+          <div class="result__images">
             <picture>
               <source srcset="img/result3-mob.png 1x, img/result3-mob@2x.png 2x" media="(max-width: 768px) and (orientation: portrait)">
               <img src="img/result3.png" srcset="img/result3@2x.png 2x" alt="">
